  subgoals. The default flags `on`, `off`, and an _unquoted_ number have the
  following meanings:

  * `on` : the same as `"0[∞];1[∞];…"`
  * `off` : the same as `"0[0];1[0];…"`
  * `n` : the same as `"0[0];̣…;n-1[0];n[∞];n+1[0];…"`

Tweaks to existing functionality

* Import declarations automatically compile if needed. An explicit Makefile
  is very rarely needed any more.


Bugfixes

* Annotation mode (-a) output is no longer printed in other modes
* Import statements can now be undone as well from ProofGeneral
* Importing .thcs made with a different Abella binary will now print an
  error message instead of causing a segmentation fault (#39)
* Importing from different directories now works correctly


Changes in 2.0.3 from 2.0.2
---------------------------

Potentially breaking changes

* Removed ~ and != notations (introduced in 2.0.2, and unused by anyone as
  far as I know). A general notation support may be considered for Abella
  in the future. Meanwhile, we prefer simplicity and predictability.


Additions

* The unfold tactic has an optional argument, "(all)", that produces a
  disjunction of all solutions to the matching problem of the conclusion of
  a subgoal and its relevant (co)definition. The disjuncts are produced in
  the same order as the clauses, but if a single clause has multiple ways to
  match the head then the disjuncts for that clause are in some unspecified
  order (that depends on the details of the unification algorithm).
* The following tactic forms have been added:

      apply *H to ...
      apply ... to ... *H ...
      backchain *H
      cut *H ...
      cut ... with *H
      inst *H with ...
      monotone *H with ...

  In each case, if H names a hypothesis, then the tactic consumes the
  hypothesis (like the clear tactic). Note that if hypothesis hints are
  given, then these hints are used *after* consuming the hypotheses. Thus,
  if one writes:

      foo : apply lem to *foo bar baz.
